# memory-grep

./: .gitignore  CLAUDE.md  PRD.md  progress.md  pyproject.toml
memgrep/: __init__.py  __main__.py  cli.py  formatter.py  matcher.py  scanner.py
tests/: conftest.py  test_smoke.py
