[project]
name = "memgrep"
version = "0.1.0"
description = "Personal CLI to grep across Claude Code persistent memory"
authors = [
    { name = "Greg Martin", email = "gregory.martin.data@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
memgrep = "memgrep:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
